...
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        tools:context="com.openclassrooms.mareu.ui.meeting_list.AddMeetingActivity">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
            android:layout_marginTop="16dp"
            android:dropDownHeight="120dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subjectLyt" />

        <TextView
            android:id="@+id/in_date"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="none"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerRoomInput" />

        <Button
            android:id="@+id/btn_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SELECT DATE"
            app:layout_constraintStart_toEndOf="@+id/in_date"
            app:layout_constraintTop_toTopOf="@+id/in_date" />

        <TextView
            android:id="@+id/in_time"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="none"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_date" />

        <Button
            android:id="@+id/btn_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SELECT TIME"
            app:layout_constraintStart_toEndOf="@+id/in_time"
            app:layout_constraintTop_toTopOf="@+id/in_time" />

...
                android:inputType="text"
                android:scrollbars="horizontal"
                android:scrollHorizontally="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:enabled="false"
            android:text="Save"
...
