<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:windowSoftInputMode="stateHidden"
    tools:context="com.openclassrooms.mareu.ui.meeting_list.ListMeetingActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:theme="@style/AppTheme.AppBarOverlay"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:title="Ma reunion"
            tools:layout_conversion_absoluteHeight="56dp"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_conversion_absoluteWidth="411dp">

        </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <Spinner
                android:id="@+id/spinnerRoom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:theme="@style/spinnerTheme"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/in_dateFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="4dp"
                android:inputType="text"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="@+id/spinnerRoom"
                app:layout_constraintTop_toBottomOf="@+id/spinnerRoom" />

            <Button
                android:id="@+id/btn_dateFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SELECT"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toStartOf="@+id/btn_dateClear"
                app:layout_constraintTop_toBottomOf="@+id/spinnerRoom" />

            <Button
                android:id="@+id/btn_dateClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ALL"
                app:layout_constraintEnd_toEndOf="@+id/spinnerRoom"
                app:layout_constraintTop_toBottomOf="@+id/spinnerRoom" />
       </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>
    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >

    </FrameLayout>
    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/add_meeting"
        app:srcCompat="@drawable/ic_person_add_white_24dp"
        android:text="Add"
        app:backgroundTint="@color/colorPrimary"
        android:layout_margin="@dimen/fab_margin"
        android:layout_gravity="end|bottom"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>